--- a/ecomm/src/components/Header.css
+++ b/ecomm/src/components/Header.css
@@ -6,7 +6,6 @@
     justify-content: space-between;
     align-items: center;
     width: 80%;
-    background: brown;
 }
 
 .landmarks-container {
@@ -21,4 +20,9 @@
 .landmark-link {
     text-decoration: none;
     color: black;
+    font-size: 18px;
+}
+
+.title {
+    font-size: 22px;
 }
