--- a/ecomm/src/components/Header.css
+++ b/ecomm/src/components/Header.css
@@ -5,7 +5,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    width: 100%;
+    z-index: 999;
+    position: fixed;
 }
 
 .landmarks-container {
