--- a/ecomm/src/App.css
+++ b/ecomm/src/App.css
@@ -2,5 +2,5 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: 'EB Garamond', serif;
 }
