--- a/ecomm/src/components/Home.css
+++ b/ecomm/src/components/Home.css
@@ -2,12 +2,10 @@
     display: flex;
     background-color: grey;
     color: white;
-    height: 400px;
+    height: 720px;
     margin-bottom: 40px;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
     flex-direction: column;
-    position: relative;
 }
 
 .text-centered {
@@ -15,14 +13,12 @@
 }
 
 .button-visit-shop {
-    position: absolute;
     font-size: 18px;
-    bottom: 40px;
-    display: block;
     padding: 20px 35px;
     cursor: pointer;
     color: #f9f6f6;
     background-color: #7b3d63;
+    margin: 0 0 60px 0;
     border: 2px solid #7b3d63;
 }
 
@@ -31,9 +27,10 @@
 }
 
 .font-size-24 {
-    font-size: 36px;
+    font-size: 42px;
     letter-spacing: 1.1px;
     font-weight: 500;
+    padding-bottom: 40px;
 }
 
 .intro-section {
@@ -49,11 +46,9 @@
 }
 
 .intro-image {
-    grid-area: left;
 }
 
 .intro-text {
-    grid-area: right;
     font-size: 22px;
     line-height: 32px;
 }
@@ -72,4 +67,13 @@
 
 .button-read-more:hover {
     opacity: 70%;
+}
+
+.link-visit-shop {
+    text-decoration: none;
+    color: white;
+}
+
+.btn-vt-sh-container {
+    text-align: center;
 }
