--- a/ecomm/src/components/About.css
+++ b/ecomm/src/components/About.css
@@ -3,4 +3,13 @@
     grid-template-columns: 1fr 1fr;
     grid-gap: 20px;
     margin-top: 30px;
+    padding: 40px 160px 100px 160px;
+}
+
+.about-image-container {
+    margin-bottom: 40px;
+}
+
+.contact-info {
+    font-size: 20px;
 }
