--- a/ecomm/src/components/Header.css
+++ b/ecomm/src/components/Header.css
@@ -6,10 +6,9 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    top: 0;
-    position: fixed;
+    position: sticky;
     background: white;
-    z-index: 999;
+    top: 0;
 }
 
 .landmarks-container {
