--- a/ecomm/src/components/About.css
+++ b/ecomm/src/components/About.css
@@ -1,7 +1,7 @@
 .about-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    grid-template-columns: 0.6fr 1.4fr;
+    grid-gap: 60px;
     margin-top: 30px;
     padding: 40px 160px 100px 160px;
 }
@@ -12,4 +12,10 @@
 
 .contact-info {
     font-size: 20px;
+}
+
+.img-profile-1 {
+    height: 90%;
+    width: 90%;
+    border-radius: 10%;
 }
