--- a/ecomm/src/components/Header.css
+++ b/ecomm/src/components/Header.css
@@ -8,6 +8,7 @@
     width: 100%;
     position: sticky;
     background: white;
+    border-bottom: 1px solid rgb(160, 155, 155);;
     top: 0;
 }
 
