--- a/ecomm/src/components/Home.css
+++ b/ecomm/src/components/Home.css
@@ -83,4 +83,5 @@
 .img-profile-2 {
     width: 100%;
     height: 100%;
+    box-shadow: 4px 6px 8px 4px rgba(0,0,0,.4), 0 6px 20px 0 rgba(0,0,0,.19);
 }
