--- a/ecomm/src/components/Header.css
+++ b/ecomm/src/components/Header.css
@@ -8,7 +8,8 @@
     width: 100%;
     position: sticky;
     background: white;
-    border-bottom: 1px solid rgb(160, 155, 155);;
+    border-bottom: 1px solid rgb(160, 155, 155);
+    z-index: 999;
     top: 0;
 }
 
