--- a/ecomm/src/components/PictureCard.css
+++ b/ecomm/src/components/PictureCard.css
@@ -1,11 +1,14 @@
+.picure-card-container {
+    cursor: pointer;
+}
+
 .picture-card-title {
-    margin-top: 6px;
+    margin-top: 8px;
     font-size: 24px;
     font-weight: 500;
 }
 
 .picture-card-price {
-    margin-top: 6px;
     font-size: 20px;
     font-weight: 500;
 }
@@ -13,4 +16,11 @@
 .picture-card-image {
     width: 100%;
     height: 100%;
+    box-shadow: 1px 3px 4px 1px rgba(0,0,0,.4), 0 3px 12px 0 rgba(0,0,0,.19);
+    transition: transform .1s;
+}
+
+.picture-card-image:hover {
+    transform: scale(1.080);
+    box-shadow: 3px 4px 6px 3px rgba(0,0,0,.4), 0 4px 18px 0 rgba(0,0,0,.19);
 }
