--- a/ecomm/src/components/PictureCard.css
+++ b/ecomm/src/components/PictureCard.css
@@ -24,3 +24,8 @@
     transform: scale(1.080);
     box-shadow: 3px 4px 6px 3px rgba(0,0,0,.4), 0 4px 18px 0 rgba(0,0,0,.19);
 }
+
+.no-dec {
+    text-decoration: none;
+    color: black;
+}
