--- a/ecomm/src/components/Shop.css
+++ b/ecomm/src/components/Shop.css
@@ -33,7 +33,9 @@
 
 .filter-title {
     text-align: center;
-    font-size: 28px;
-    font-weight: 500;
+    font-size: 24px;
     margin-bottom: 40px;
+    font-weight: 500;
+    letter-spacing: 0em;
+    line-height: 1.8em;
 }
