--- a/ecomm/src/components/Pdp.css
+++ b/ecomm/src/components/Pdp.css
@@ -27,10 +27,21 @@
     padding: 10px;
     cursor: pointer;
     color: #f9f6f6;
-    background-color: #8b1f37;
+    background-color: #a11735;
     border: 2px solid #751717;
 }
 
 .purchase-button:hover {
     opacity: 80%;
+}
+
+.pdp-info-paragraph {
+    font-size: 18px;
+    margin: 15px 0;
+}
+
+.pdp-image {
+    width: 100%;
+    height: 100%;
+    box-shadow: 4px 6px 8px 4px rgba(0,0,0,.4), 0 6px 20px 0 rgba(0,0,0,.19);
 }
