--- a/ecomm/src/components/Pdp.css
+++ b/ecomm/src/components/Pdp.css
@@ -28,7 +28,7 @@
     cursor: pointer;
     color: #f9f6f6;
     background-color: #a11735;
-    border: 2px solid #751717;
+    border: 2px solid #a8206b;
 }
 
 .purchase-button:hover {
