--- a/ecomm/src/components/Header.css
+++ b/ecomm/src/components/Header.css
@@ -11,6 +11,7 @@
     border-bottom: 1px solid rgb(160, 155, 155);
     z-index: 999;
     top: 0;
+    box-shadow: 1px 4px 6px 1px rgba(0,0,0,.4), 0 4px 12px 0 rgba(0,0,0,.19);
 }
 
 .landmarks-container {
